--- a/WebApplication1/Pages/Index.cshtml
+++ b/WebApplication1/Pages/Index.cshtml
@@ -6,5 +6,7 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p><a href="https://tb.alicdn.com/snapshot/index.html">淘宝网</a>.</p>
+    <p><a href="https://www.gslhr.org.cn/list/796">全国工商联人才交流服务中心</a>.</p>
+    <p><a href=" https://www.bilibili.com/">哔哩哔哩动画</a>.</p>   
 </div>
